# simple_colors

./: .gitignore  Cargo.toml  README.md  preview.md
src/: custom.rs  lib.rs
src/enums/: mod.rs
src/macros/: bg.rs  color.rs  general.rs  mod.rs  print.rs  style.rs
